--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/new_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -30,7 +30,7 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".FormAccountActivity" />
         <activity android:name=".ShowDataActivity" />
-        <activity android:name=".TesteActivity"></activity>
+
     </application>
 
 </manifest>
